fixed layout issues, implemented product page

--- a/src/route/index.css
+++ b/src/route/index.css
@@ -1,3 +1,7 @@
 .search select {
-    width: 100%
+  width: 100%;
+}
+
+.browse {
+  overflow: scroll;
 }
